@@ -1,3 +1,8 @@
+2003-08-16  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* PkgVersion.pm: Adding default value of 10.3 for 
+	MACOSX_DEPLOYMENT_TARGET 
+
 2003-08-14  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* PkgVersion.pm: Disable the prebinding code unless the distribution
